# Orbit-Graph-based-workspace-explorer

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_HANDOFF_ORBIT_GRAPH.md  OPENCODE_HANDOFF_ORBIT_GRAPH.md  THIRD_PARTY_NOTICES.md  install.sh  justfile  package-lock.json  package.json  uninstall.sh
.aionrs/sessions/: 2026-04-29_dc46a7a0.json  index.json
.planning/: HANDOFF.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-COMPLETION.md  v1.0-MILESTONE-AUDIT.md  v2-GRAPH-OVERHAUL.md  v2.0-PLANNING-SUMMARY.md
Omarchy-commands-for-debug/: omarchy-cli-commands.md
docs/: PACKAGING.md  WORKBENCH.md
frontend/: package-lock.json  package.json
scripts/: build-appimage.sh  check-tauri-commands.mjs  generate-icons.sh  install-desktop-entry.sh  install-omarchy-theme.sh  smoke-frontend.mjs  test-appimage.sh
src-tauri/: Cargo.toml  DESKTOP.md  orbit-dev.desktop  orbit-folder.desktop  orbit.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: code_analyzer.rs  color_extractor.rs  db.rs  git_status.rs  graph.rs  icon_theme.rs  image_analyzer.rs  image_hash.rs  logger.rs  main.rs  markdown_analyzer.rs  models.rs  omarchy.rs  performance.rs  preview.rs  scanner.rs  thumbnail_generator.rs
src-tauri/src/commands/: analysis.rs  file.rs  image_analysis.rs  mod.rs  notes.rs  thumbnail.rs
src-tauri/src/db/: thumbnail_schema.sql
src-tauri/src/services/: mod.rs  thumbnail_generator.rs
src-tauri/themes/: material.toml  minimal-mono.toml  nerd-font.toml  omarchy.toml  orbit-default.toml  orbit.toml.tpl  vivid.toml
(+146 files in other folders)
