[package]
name = "orbit"
version = "0.1.0"
description = "Graph-first file intelligence IDE"
authors = ["Orbit"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
git2 = "0.18"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
jwalk = "0.8"
open = "5"
regex = "1.10"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
